# katas

./: .gitignore  README  README.md  pom.xml  tones_stats.csv
algorave/: hello.tidal  tidal.tidal
algorave/2021/: midi-playground.tidal
algorave/summerschool/: #day2.tidal#  day1.tidal  day2.tidal  midi-playground.tidal  notes.txt  visinit.tidal
algorave/tidal/: hello.tidal  startup.scd
clojure/: aa.clj
clojure/anagrams/: anagrams1.clj  anagrams2.clj
clojure/bsearch/: bsearch1.clj  bsearch2.clj  bsearch3.clj  bsearch4.clj
clojure/insert_sort/: insert_sort0.clj  insert_sort1.clj
clojure/merge_sort/: merge_sort0.clj
coffeescript/: bsearch0.coffee  bsearch1.coffee
contextfree/: hello.cfdg  loops.cfdg  sun.cfdg
contextfree/from-gallery/: bnw.cfdg  city-of-horrors.cfdg  color-spiral-2b.cfdg  (+11 more)
cpp/: 1.cpp  1.h  2.cpp  2.h  CMakeLists.txt  main.cpp  pull-push.cpp
cpp/boost-coroutines/: CMakeLists.txt  callcc-factorial.cpp  callcc.cpp  pull-push.cpp
cpp/coroutines/: generator.cpp  hello.cpp  makefile
idris/: data_types.idr  functions.idr  hello.idr  leap_year.idr
java/: pom.xml
js/: http.rb  ij-method-resolution.js
kotlin/: build.gradle  pom.xml  settings.gradle
kotlin-js/: build.gradle  pom.xml
kotlin-native/: .gitignore  luamidi.def  makefile
lua/: common.lua  hello.lua
python/: sexpr.py
q/: lists.q  sp.q  volany.q
r/: doors.R  josephus.R  scratch.R
rust/: casting.rs  flow-control.rs  functions.rs
scala/: pom.xml
sentient/: abc.snt  diamond.snt  eight-queens.snt  magic-square.snt  square_anagram.snt  subset.snt
src/: README
(+2604 files in other folders)
